--- a/app/src/main/res/layout/dialog_thermal_zone_picker_list_item.xml
+++ b/app/src/main/res/layout/dialog_thermal_zone_picker_list_item.xml
@@ -28,6 +28,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:checked="@={data.selected}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
