--- a/app/src/main/res/layout/fragment_first_time_setup_thermal_monitor.xml
+++ b/app/src/main/res/layout/fragment_first_time_setup_thermal_monitor.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".main.ui.FirstTimeSetupThermalMonitorFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="THERMAL MONITOR" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/thermal_monitor"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />
 
-</FrameLayout>
+    <FrameLayout
+        android:id="@+id/firstTimeSetupThermalMonitorSettings"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+</LinearLayout>
