--- a/app/src/main/res/xml/fragment_settings_first_time_setup_thermal_monitor.xml
+++ b/app/src/main/res/xml/fragment_settings_first_time_setup_thermal_monitor.xml
@@ -5,13 +5,13 @@
         <CheckBoxPreference
             app:defaultValue="false"
             app:key="thermalMonitorEnabled"
-            app:title="Enable thermal monitoring" />
+            app:title="@string/enable_thermal_monitoring" />
 
         <CheckBoxPreference
             app:defaultValue="false"
             app:dependency="thermalMonitorEnabled"
             app:key="thermalMonitorUseRoot"
-            app:title="Use root to access thermal zones" />
+            app:title="@string/use_root_to_access_thermal_zones" />
 
         <ListPreference
             app:defaultValue="0"
@@ -19,16 +19,16 @@
             app:entries="@array/thermalMonitorScaleEntries"
             app:entryValues="@array/thermalMonitorScaleValues"
             app:key="thermalMonitorScale"
-            app:summary="Choose the temperature scale to use."
-            app:title="Temperature scale" />
+            app:summary="@string/temperature_scale_summary"
+            app:title="@string/temperature_scale" />
 
         <com.gitlab.saschabrunner.thermalmonitor.thermal.ThermalZonePickerPreference
             app:dependency="thermalMonitorEnabled"
             app:entries="@array/emptyStringArray"
             app:entryValues="@array/emptyStringArray"
             app:key="thermalMonitorThermalZones"
-            app:summary="Select the thermal zones to monitor."
-            app:title="Thermal zones" />
+            app:summary="@string/thermal_zones_summary"
+            app:title="@string/thermal_zones" />
     </PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
