--- a/app/src/main/res/xml/fragment_settings_thermal_monitor.xml
+++ b/app/src/main/res/xml/fragment_settings_thermal_monitor.xml
@@ -2,36 +2,36 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="Thermal Monitor">
+    <PreferenceCategory app:title="@string/thermal_monitor">
         <Preference
             app:key="dummyValidatePreferences"
-            app:summary="Check the compatibility of this module with the current settings."
-            app:title="Check compatibility" />
+            app:summary="@string/check_compatibility_summary"
+            app:title="@string/check_compatibility" />
 
         <CheckBoxPreference
             app:defaultValue="false"
             app:key="thermalMonitorEnabled"
-            app:title="Enable thermal monitoring" />
+            app:title="@string/enable_thermal_monitoring" />
 
         <CheckBoxPreference
             app:defaultValue="false"
             app:key="thermalMonitorUseRoot"
-            app:title="Use root to access thermal zones" />
+            app:title="@string/use_root_to_access_thermal_zones" />
 
         <ListPreference
             app:defaultValue="0"
             app:entries="@array/thermalMonitorScaleEntries"
             app:entryValues="@array/thermalMonitorScaleValues"
             app:key="thermalMonitorScale"
-            app:summary="Choose the temperature scale to use."
-            app:title="Temperature scale" />
+            app:summary="@string/temperature_scale_summary"
+            app:title="@string/temperature_scale" />
 
         <com.gitlab.saschabrunner.thermalmonitor.thermal.ThermalZonePickerPreference
             app:entries="@array/emptyStringArray"
             app:entryValues="@array/emptyStringArray"
             app:key="thermalMonitorThermalZones"
-            app:summary="Select the thermal zones to monitor."
-            app:title="Thermal zones" />
+            app:summary="@string/thermal_zones_summary"
+            app:title="@string/thermal_zones" />
 
         <com.gitlab.saschabrunner.thermalmonitor.main.ui.CustomSeekBarPreference
             android:max="9990"
@@ -39,8 +39,8 @@
             app:key="thermalMonitorRefreshInterval"
             app:min="500"
             app:stepWidth="100"
-            app:summary="Choose the refresh interval to use in milliseconds."
-            app:title="Refresh interval" />
+            app:summary="@string/refresh_interval_summary"
+            app:title="@string/refresh_interval" />
     </PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
