--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
-<!--?xml version="1.0" encoding="UTF-8"?-->
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <color name="primaryColor">#29b6f6</color>
     <color name="primaryLightColor">#73e8ff</color>
